# ogz-monorepo

./: .gitignore  README.md
.github/workflows/: build-client.yml
ogz-client/: Gunz.dmp
ogz-client/system/: system.xml
ogz-server/: .dockerignore  Dockerfile  Locator.ini  docker-compose.yml
ogz-source/: Dockerfile.build  build-docker.sh
ogz-source/src/: CMakeLists.txt
ogz-source/src/CSCommon/: CMakeLists.txt
ogz-source/src/CSCommon/Source/: MQuestDropTable.cpp  NetIO.cpp
ogz-source/src/Gunz/: CMakeLists.txt
ogz-source/src/Locator/: MLocator.cpp
ogz-source/src/MatchServer/: CMakeLists.txt
ogz-source/src/PatchCreator/: CMakeLists.txt
ogz-source/src/cml/: CMakeLists.txt
ogz-source/src/cml/Include/: MUtil.h
ogz-source/src/launcher/: CMakeLists.txt
